SMT/_build/parser.output
   0  $accept : %entry% $end

   1  pterms : LPAR pterms RPAR
   2         | FUN LPAR pterms RPAR
   3         | VAR pterms
   4         | VAR

   5  ppred : LPAR ppred RPAR
   6        | pterms EQUAL pterms
   7        | pterms DIFF pterms

   8  pform : LPAR pform RPAR
   9        | pform OR pform
  10        | pform AND pform
  11        | pform IMPLY pform
  12        | NOT pform
  13        | LBKT ppred RBKT

  14  %entry% : '\001' pform
  15          | '\002' pterms
  16          | '\003' ppred

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	.  error

	%entry%  goto 4


state 1
	%entry% : '\001' . pform  (14)

	LPAR  shift 5
	LBKT  shift 6
	NOT  shift 7
	.  error

	pform  goto 8


state 2
	%entry% : '\002' . pterms  (15)

	LPAR  shift 9
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 12


state 3
	%entry% : '\003' . ppred  (16)

	LPAR  shift 13
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 14
	ppred  goto 15


state 4
	$accept : %entry% . $end  (0)

	$end  accept


state 5
	pform : LPAR . pform RPAR  (8)

	LPAR  shift 5
	LBKT  shift 6
	NOT  shift 7
	.  error

	pform  goto 16


state 6
	pform : LBKT . ppred RBKT  (13)

	LPAR  shift 13
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 14
	ppred  goto 17


state 7
	pform : NOT . pform  (12)

	LPAR  shift 5
	LBKT  shift 6
	NOT  shift 7
	.  error

	pform  goto 18


state 8
	pform : pform . OR pform  (9)
	pform : pform . AND pform  (10)
	pform : pform . IMPLY pform  (11)
	%entry% : '\001' pform .  (14)

	OR  shift 19
	AND  shift 20
	IMPLY  shift 21
	$end  reduce 14


state 9
	pterms : LPAR . pterms RPAR  (1)

	LPAR  shift 9
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 22


state 10
	pterms : VAR . pterms  (3)
	pterms : VAR .  (4)

	LPAR  shift 9
	VAR  shift 10
	FUN  shift 11
	$end  reduce 4
	RPAR  reduce 4
	RBKT  reduce 4
	EQUAL  reduce 4
	DIFF  reduce 4

	pterms  goto 23


state 11
	pterms : FUN . LPAR pterms RPAR  (2)

	LPAR  shift 24
	.  error


state 12
	%entry% : '\002' pterms .  (15)

	.  reduce 15


state 13
	pterms : LPAR . pterms RPAR  (1)
	ppred : LPAR . ppred RPAR  (5)

	LPAR  shift 13
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 25
	ppred  goto 26


state 14
	ppred : pterms . EQUAL pterms  (6)
	ppred : pterms . DIFF pterms  (7)

	EQUAL  shift 27
	DIFF  shift 28
	.  error


state 15
	%entry% : '\003' ppred .  (16)

	.  reduce 16


state 16
	pform : LPAR pform . RPAR  (8)
	pform : pform . OR pform  (9)
	pform : pform . AND pform  (10)
	pform : pform . IMPLY pform  (11)

	RPAR  shift 29
	OR  shift 19
	AND  shift 20
	IMPLY  shift 21
	.  error


state 17
	pform : LBKT ppred . RBKT  (13)

	RBKT  shift 30
	.  error


state 18
	pform : pform . OR pform  (9)
	pform : pform . AND pform  (10)
	pform : pform . IMPLY pform  (11)
	pform : NOT pform .  (12)

	OR  shift 19
	AND  shift 20
	IMPLY  shift 21
	$end  reduce 12
	RPAR  reduce 12


state 19
	pform : pform OR . pform  (9)

	LPAR  shift 5
	LBKT  shift 6
	NOT  shift 7
	.  error

	pform  goto 31


state 20
	pform : pform AND . pform  (10)

	LPAR  shift 5
	LBKT  shift 6
	NOT  shift 7
	.  error

	pform  goto 32


state 21
	pform : pform IMPLY . pform  (11)

	LPAR  shift 5
	LBKT  shift 6
	NOT  shift 7
	.  error

	pform  goto 33


state 22
	pterms : LPAR pterms . RPAR  (1)

	RPAR  shift 34
	.  error


state 23
	pterms : VAR pterms .  (3)

	.  reduce 3


state 24
	pterms : FUN LPAR . pterms RPAR  (2)

	LPAR  shift 9
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 35


state 25
	pterms : LPAR pterms . RPAR  (1)
	ppred : pterms . EQUAL pterms  (6)
	ppred : pterms . DIFF pterms  (7)

	RPAR  shift 34
	EQUAL  shift 27
	DIFF  shift 28
	.  error


state 26
	ppred : LPAR ppred . RPAR  (5)

	RPAR  shift 36
	.  error


state 27
	ppred : pterms EQUAL . pterms  (6)

	LPAR  shift 9
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 37


state 28
	ppred : pterms DIFF . pterms  (7)

	LPAR  shift 9
	VAR  shift 10
	FUN  shift 11
	.  error

	pterms  goto 38


state 29
	pform : LPAR pform RPAR .  (8)

	.  reduce 8


state 30
	pform : LBKT ppred RBKT .  (13)

	.  reduce 13


state 31
	pform : pform . OR pform  (9)
	pform : pform OR pform .  (9)
	pform : pform . AND pform  (10)
	pform : pform . IMPLY pform  (11)

	IMPLY  shift 21
	$end  reduce 9
	RPAR  reduce 9
	OR  reduce 9
	AND  reduce 9


state 32
	pform : pform . OR pform  (9)
	pform : pform . AND pform  (10)
	pform : pform AND pform .  (10)
	pform : pform . IMPLY pform  (11)

	IMPLY  shift 21
	$end  reduce 10
	RPAR  reduce 10
	OR  reduce 10
	AND  reduce 10


state 33
	pform : pform . OR pform  (9)
	pform : pform . AND pform  (10)
	pform : pform . IMPLY pform  (11)
	pform : pform IMPLY pform .  (11)

	IMPLY  shift 21
	$end  reduce 11
	RPAR  reduce 11
	OR  reduce 11
	AND  reduce 11


state 34
	pterms : LPAR pterms RPAR .  (1)

	.  reduce 1


state 35
	pterms : FUN LPAR pterms . RPAR  (2)

	RPAR  shift 39
	.  error


state 36
	ppred : LPAR ppred RPAR .  (5)

	.  reduce 5


state 37
	ppred : pterms EQUAL pterms .  (6)

	.  reduce 6


state 38
	ppred : pterms DIFF pterms .  (7)

	.  reduce 7


state 39
	pterms : FUN LPAR pterms RPAR .  (2)

	.  reduce 2


18 terminals, 5 nonterminals
17 grammar rules, 40 states
